src/test/deca/context/valid/homemade/autoreferencement_decompile.res
class A extends Object {
	A a = new A();
}
{
	A classe = new A();
}
