src/test/deca/context/invalid/homemade/print_bool_decompile.res
{
	boolean a = true;
	println(a);
}
